<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        style="@style/logotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_campos_login"
        style="@style/view_campos_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/edit_text_style"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/view_campos_login"
        app:layout_constraintStart_toStartOf="@+id/view_campos_login"
        app:layout_constraintTop_toTopOf="@id/view_campos_login" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/edit_text_style"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/senha"
        android:layout_marginTop="20dp"
        android:inputType="numberPassword"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/view_campos_login"
        app:layout_constraintStart_toStartOf="@id/view_campos_login"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_entrar"
        style="@style/botao_entrar"
        android:text="@string/botao_entrar"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/view_campos_login"
        app:layout_constraintStart_toStartOf="@+id/view_campos_login"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/verde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_campos_login"/>

    <TextView
        android:id="@+id/texto_cadastro"
        style="@style/texto_cadastro"
        android:text="@string/texto_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>